--- a/build.gradle
+++ b/build.gradle
@@ -1,51 +1,57 @@
 buildscript {
     repositories {
-        mavenLocal()
-        mavenCentral()
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = 'sponge'
-            url = 'http://repo.spongepowered.org/maven'
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath "net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT"
+        classpath "de.undercouch:gradle-download-task:4.1.1"
     }
 }
 
-apply plugin: 'net.minecraftforge.gradle.liteloader'
+apply plugin: "net.minecraftforge.gradle.forge"
+apply plugin: "de.undercouch.download"
 
 version = "1.4.0"
-group = "io.github.kyzderp.autocraftmod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = "io.github.kyzderp.autocraftmod"
 archivesBaseName = "autocraft"
 
 minecraft {
-    version = "1.10.2"
-    mappings = "snapshot_20160906"
+    version = "1.8.9-11.15.1.1855"
     runDir = "run"
+
+    mappings = "stable_20"
 }
 
-sourceSets {
-    main {
+dependencies {
+    compile files("${rootDir.getAbsolutePath()}/libs/lm_api_mc1.8.9.jar")
+}
+
+task updateLabymodApi() {
+    final out = file("${rootDir.getAbsolutePath()}/libs/lm_api_mc1.8.9.jar")
+    outputs.file(out)
+    outputs.upToDateWhen {false}
+
+    doLast {
+        download {
+            src "http://dl.labymod.net/latest/api/files/lm_api_mc1.8.9.jar"
+            dest out
+            onlyIfModified true
+        }
     }
 }
 
-litemod {
-    json {
-        name = "AutoCraftMod"
-        mcversion = "1.10.r1"
-        author = "Kyzeragon"
-        description = ""
+reobf {
+    jar {
+        useNotchSrg()
     }
 }
 
-jar {
-    from litemod.outputs
+compileJava {
+    dependsOn updateLabymodApi
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 }
