--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,5 +43,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./build/libs/autocraft.jar
-          asset_name: ScammerList.jar
+          asset_name: autocraft.jar
           asset_content_type: application/java-archive
