Renamed Repository and added Icon

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/libs/autocraft.jar
-          asset_name: autocraft.jar
+          asset_path: ./build/libs/AutoCraft.jar
+          asset_name: AutoCraft.jar
           asset_content_type: application/java-archive
